force-app/main/default/objects/tc9_3bint__Shift_Item__c/tc9_3bint__Shift_Item__c.object-meta.xml
<CustomObject>
    <label>2c9 Shift Item</label>
    <nameField>
        <displayFormat>SI-{0000000000}</displayFormat>
        <label>2c9 Shift Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>2c9 Shift Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>