force-app/main/default/objects/tc9_3bint__Shift_Item__c/fields/tc9_3bint__Allowance__c.field-meta.xml
<CustomField>
    <fullName>tc9_3bint__Allowance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Allowance</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>tc9_pr__Payee_Allowance_Record__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Timesheet Allowance Template Group</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>tc9_pr__Payee_Allowance_Record__c</referenceTo>
    <relationshipLabel>2c9 Shift Items</relationshipLabel>
    <relationshipName>X2c9_Shift_Items</relationshipName>
    <type>Lookup</type>
</CustomField>