force-app/main/default/objects/tc9_3bint__Shift_Item__c/fields/tc9_3bint__Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>tc9_3bint__Approval_Status__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_et__Approval_Status_Picklists</valueSetName>
    </valueSet>
</CustomField>