force-app/main/default/objects/tc9_3bint__Shift_Item__c/fields/tc9_3bint__Employee_Notes__c.field-meta.xml
<CustomField>
    <fullName>tc9_3bint__Employee_Notes__c</fullName>
    <label>Employee Notes</label>
    <type>TextArea</type>
</CustomField>