force-app/main/default/objects/tc9_3bint__Shift_Item__c/fields/tc9_3bint__Quantity__c.field-meta.xml
<CustomField>
    <fullName>tc9_3bint__Quantity__c</fullName>
    <label>Quantity</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>