force-app/main/default/objects/tc9_3bint__Shift_Item__c/fields/tc9_3bint__Shift__c.field-meta.xml
<CustomField>
    <fullName>tc9_3bint__Shift__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shift</label>
    <referenceTo>b3s__Shift__c</referenceTo>
    <relationshipLabel>2c9 Shift Items</relationshipLabel>
    <relationshipName>X2c9_Shift_Items</relationshipName>
    <type>Lookup</type>
</CustomField>