force-app/main/default/objects/tc9_3bint__Shift_Item__c/fields/tc9_3bint__Shift_Item_Integration_Pending__c.field-meta.xml
<CustomField>
    <fullName>tc9_3bint__Shift_Item_Integration_Pending__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shift Item Integration Pending</label>
    <type>Checkbox</type>
</CustomField>