force-app/main/default/objects/tc9_3bint__Shift_Item__c/listViews/tc9_3bint__All.listView-meta.xml
<ListView>
    <fullName>tc9_3bint__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>